feat: "인허가 번호 중복확인 API 추가"